<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.popularmovies.details.activity.MovieDetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:text="Test Title" />

        <ProgressBar
            android:id="@+id/pb_favorite_load"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/btn_detail_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/btn_detail_favorite"
            app:layout_constraintLeft_toLeftOf="@+id/btn_detail_favorite"
            app:layout_constraintRight_toRightOf="@+id/btn_detail_favorite"
            android:background="#80FFFFFF"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btn_detail_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:text="@string/detail_favorite_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:contentDescription="@string/detail_favorite_label"
            android:stateListAnimator="@null"/>



        <ImageView
            android:id="@+id/iv_detail_poster"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_detail_favorite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="12dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/content_detail_poster" />

        <TextView
            android:id="@+id/tv_detail_release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_poster"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:text="@string/detail_rel_date"
            app:layout_constraintLeft_toLeftOf="@+id/guide_detail_label" />

        <TextView
            android:id="@+id/tv_detail_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_release_date_label"
            app:layout_constraintLeft_toLeftOf="@+id/guide_detail_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            tools:text="February 9"/>

        <TextView
            android:id="@+id/tv_detail_vote_avg_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_release_date"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:text="@string/detail_vote_avg"
            app:layout_constraintLeft_toLeftOf="@+id/guide_detail_label" />

        <TextView
            android:id="@+id/tv_detail_vote_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_vote_avg_label"
            app:layout_constraintLeft_toLeftOf="@+id/guide_detail_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            tools:text="4.5" />

        <TextView
            android:id="@+id/tv_detail_synopsis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_vote_avg"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:text="@string/detail_synopsis"
            app:layout_constraintLeft_toLeftOf="@+id/guide_detail_label" />

        <TextView
            android:id="@+id/tv_detail_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_synopsis_label"
            app:layout_constraintLeft_toRightOf="@+id/guide_detail_label"
            app:layout_constraintRight_toRightOf="parent"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            tools:text="Text synopsis"/>

        <include
            android:id="@+id/videos_container"
            layout="@layout/videos_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_synopsis"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <include
            android:id="@+id/reviews_container"
            layout="@layout/reviews_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/videos_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guide_detail_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />
        <android.support.constraint.Guideline
            android:id="@+id/guide_detail_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
